bin/tests/snapshots/useless_parens__fix_c9c2c5ee98fe4ec9a3222e0b5b4f35ab42d8a2503571cea8bf026560b9c239f4.snap
---
source: bin/tests/useless_parens.rs
---
let a = 0; in (null)

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let a = 0; in (null)
+let a = 0; in null
