bin/tests/snapshots/useless_parens__fix_cf4cad9db99ea1f46ec3df3e1fbd7bdb5a0f4a2f9a595376cf7bdc005ee29bf9.snap
---
source: bin/tests/useless_parens.rs
---
("hello")

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-("hello")
+"hello"
