bin/tests/snapshots/useless_parens__fix_e84f99f21941256655bcb78799af749687b9632b027a0932bf05606f8fbcfaf4.snap
---
source: bin/tests/useless_parens.rs
---
[(builtins.map)]

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[(builtins.map)]
+[builtins.map]
