bin/tests/snapshots/useless_parens__lint_0de8e7054ca37e3ccc69d442aa1697e4ca4ad2925f4fb9115557fb65f360b723.snap
---
source: bin/tests/useless_parens.rs
---
let b = 0; in (b)

---
[W08] Warning: These parentheses can be omitted
   ╭─[<temp_file_path>:1:15]
   │
 1 │ let b = 0; in (b)
   ·               ─┬─  
   ·                ╰─── Useless parentheses around body of let expression
───╯
