bin/tests/snapshots/useless_parens__lint_0f832f7da085b51e7ecf8a1cd6faa2cb3cf2aeca43b93a5ec76763f2e1998091.snap
---
source: bin/tests/useless_parens.rs
---
({ f = 2; })

---
[W08] Warning: These parentheses can be omitted
   ╭─[<temp_file_path>:1:1]
   │
 1 │ ({ f = 2; })
   · ──────┬─────  
   ·       ╰─────── Useless parentheses around primitive expression
───╯
