bin/tests/snapshots/useless_parens__lint_518aa31f8b9a466e2e92490ffd87be423d3e42cf20c228150cef6c88bbd4fb11.snap
---
source: bin/tests/useless_parens.rs
---
let h = ({ inherit (builtins) map; }); in null
---
[W08] Warning: These parentheses can be omitted
   ╭─[<temp_file_path>:1:9]
   │
 1 │ let h = ({ inherit (builtins) map; }); in null
   ·         ──────────────┬──────────────  
   ·                       ╰──────────────── Useless parentheses around value in binding
───╯
